<resources>
    <string name="app_name">Pigeon</string>
    <string name="hint_phone">+9779800000000</string>
    <string name="hint_code">--- ---</string>
    <string name="verify">Send Code</string>
    <string name="enterCode">Enter the code sent</string>
    <string name="login_head">Verify your phone number</string>
    <string name="login_description">WhatsApp Clone will send an SMS message(carrier charges may apply) to verify your phone number. Enter the country code and phone number.</string>
    <string name="new_group">New Group</string>
    <string name="my_info">My Info</string>
    <string name="logout">Logout</string>
    <string name="dp_head">Profile picture and name</string>
    <string name="name">Type your name here</string>
    <string name="group_name">Type group name here</string>
    <string name="finish">Finish</string>
    <string name="dp">Profile Picture</string>
    <string name="phone">Phone number</string>
    <string name="nameInfo">Name</string>
    <string name="content_des_send">Send</string>
    <string name="type_your_msg">Type your message</string>
    <string name="changeDP">Change Profile Picture</string>
    <string name="dlt_dp">Delete Profile Picture</string>
    <string name="status">Status</string>
    <string name="type_your_info">Type new info</string>
    <string name="next">Next</string>
    <string name="description">Description</string>
    <string name="participants">Participants</string>
    <string name="group_admin">Group Admin</string>
</resources>