<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:padding="5dp"
    tools:context=".activities.InfoActivity">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dp"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:contentDescription="@string/dp"
            android:src="@drawable/img" />

        <ImageView
            android:id="@+id/change_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/dp"
            android:layout_alignBottom="@id/dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/camera_icon_background"
            android:contentDescription="@string/changeDP"
            android:padding="6dp"
            android:src="@drawable/ic_baseline_photo_camera_24" />

    </RelativeLayout>

    <TextView
        android:id="@+id/numberIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="5dp"
        android:text="@string/phone"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/rl" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bottom_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/numberIndicator">

        <TextView
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/phoneCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_baseline_call_24"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/nameIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="5dp"
        android:text="@string/nameInfo"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/ll1" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bottom_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/nameIndicator">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/nameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_baseline_edit_24"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/statusIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="5dp"
        android:text="@string/status"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/ll2" />

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bottom_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/statusIndicator">

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/statusEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_baseline_edit_24"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <Button
        android:id="@+id/dlt_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/holo_red_dark"
        android:drawableStart="@drawable/ic_baseline_delete_24"
        android:text="@string/dlt_dp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>